# estimates

./: .gitignore  CONTRIBUTING.md  README.md  estimates-0.3.0-py3-none-any.whl  index.html  pyproject.toml  z3-built.js
.github/workflows/: ci.yml  pages.yml
assets/: index-DESoldvH.js  index-DYM32DPq.css
docs/: asymptotic.md  exercises.md  lemmas.md  linprog.md  littlewood_paley.md  navigation.md  tactics.md
docs/tactics/: linarith.md  propositional.md  simplification.md  substitution.md
src/: autosolve.py  basic.py  estimates.py  examples.py  expressions.py  lemma.py  linarith.py  linprog  linprog.py  littlewood_paley.py  log_linarith.py  main.py  order_of_magnitude.py  proofassistant.py  proofstate.py  proofstates.py  prooftree.py  propositional_tactics.py  simp.py  statements.py  subst.py  tactic.py  test.py  type.py  unfold_max.py
src/dev/: README.md  basic.py  exercises.md  linarith.py  linprog.py  main.py  navigation.md  object.py  order_of_magnitude.py  proofassistant.py  proofstate.py  prooftree.py  propositional_tactics.py  simp.py  tactic.py  tactics.md
src/estimates/: basic.py  bounded.py  lemma.py  linarith.py  linprog.py  littlewood_paley.py  log_linarith.py  main.py  order_of_magnitude.py  proofassistant.py  proofstate.py  prooftree.py  proposition.py  propositional_tactics.py  simp.py  subst.py  tactic.py  test.py
src/first attempt/: estimates.py  (+1 more)
tests/: README.md  test_all.py
ui/: README.md  biome.json  build_tactics_lemmas.py  estimates-pyodide-pyproject.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+78 files in other folders)
